Minimal docs example

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ tests/output
 # developer instance, including credentials
 tests/integration/integration_config.yml
 tests/integration/inventory
+
+docs/build
+docs/source/modules
