--- a/tests/integration/targets/vm_node_affinity/tasks/main.yml
+++ b/tests/integration/targets/vm_node_affinity/tasks/main.yml
@@ -9,14 +9,13 @@
       scale_computing.hypercore.vm: &delete-XLAB-vm_node_affinity_CI_test
         vm_name: XLAB-vm_node_affinity_CI_test
         state: absent
-        memory: 536870912
-        vcpu: 2
+      register: result
 
     - name: Create XLAB-vm_node_affinity_CI_test
       scale_computing.hypercore.vm:
         vm_name: XLAB-vm_node_affinity_CI_test
         description: Demo VM
-        power_state: stopped
+        power_state: stop
         state: present
         tags:
           - 'Xlab'
@@ -24,6 +23,8 @@
           - 'test'
         memory: 536870912
         vcpu: 2
+        disks: [ ]
+        nics: [ ]
       register: output
     - ansible.builtin.assert:
         that:
