--- a/tests/integration/targets/vm_nic/tasks/main.yml
+++ b/tests/integration/targets/vm_nic/tasks/main.yml
@@ -9,15 +9,16 @@
       scale_computing.hypercore.vm: &delete-XLAB-vm_nic_CI_test
         vm_name: XLAB-vm_nic_CI_test
         state: absent
-        memory: 536870912
-        vcpu: 2
+      register: result
 
     - name: Create XLAB-vm_nic_CI_test
       scale_computing.hypercore.vm:
         vm_name: XLAB-vm_nic_CI_test
         description: Demo VM
-        power_state: stopped
+        power_state: stop
         state: present
+        disks: []
+        nics: []
         tags:
           - 'Xlab'
           - 'CI'
