Resolve "Implementation of the inventory plugin"

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,3 +5,6 @@ stdout_callback     = community.general.yaml
 retry_files_enabled = False
 forks               = 16
 collections_paths = ../../../
+# To test the inventory file: hypercore_inventory.yml
+#[inventory]
+#enable_plugins = scale_computing.hypercore.hypercore
