--- a/sample_us11_example3_playbook.yml
+++ b/sample_us11_example3_playbook.yml
@@ -7,7 +7,7 @@
           host: 'https://10.5.11.30'
           username: 'admin'
           password: 'admin'
-      vm_name: XLAB-demo-vm
+      vm_name: XLAB-POST-TEST
       items:
         - vlan: 1
           type: virtio
